--- a/proyectos/liceo/index.html
+++ b/proyectos/liceo/index.html
@@ -8,8 +8,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   
-  <title>PRESENTACIÓN LICEO &middot; iHarzz</title>
-  <meta name="title" content="PRESENTACIÓN LICEO &middot; iHarzz" />
+  <title>Liceo &middot; iHarzz</title>
+  <meta name="title" content="Liceo &middot; iHarzz" />
   
   <meta name="description" content="All my writeups from HackTheBox, TryHackMe &amp; DockerLabs." />
   
@@ -60,7 +60,7 @@
   
   
   
-  <meta property="og:title" content="PRESENTACIÓN LICEO" />
+  <meta property="og:title" content="Liceo" />
 <meta property="og:description" content="All my writeups from HackTheBox, TryHackMe &amp; DockerLabs." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://daviiddpr.github.io/proyectos/liceo/" /><meta property="og:image" content="https://daviiddpr.github.io/proyectos/liceo/featured.png" /><meta property="article:section" content="proyectos" />
@@ -68,7 +68,7 @@
 
 
   <meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:image" content="https://daviiddpr.github.io/proyectos/liceo/featured.png" /><meta name="twitter:title" content="PRESENTACIÓN LICEO"/>
+<meta name="twitter:image" content="https://daviiddpr.github.io/proyectos/liceo/featured.png" /><meta name="twitter:title" content="Liceo"/>
 <meta name="twitter:description" content="All my writeups from HackTheBox, TryHackMe &amp; DockerLabs."/>
 
   
@@ -77,8 +77,8 @@
     "@context": "https://schema.org",
     "@type": "Article",
     "articleSection": "Proyectos",
-    "name": "PRESENTACIÓN LICEO",
-    "headline": "PRESENTACIÓN LICEO",
+    "name": "Liceo",
+    "headline": "Liceo",
     "description": "All my writeups from HackTheBox, TryHackMe \u0026 DockerLabs.",
     "abstract": "LICEO # Liceo es una máquina creada para todas aquellas personas que desean iniciarse en la ciberseguridad, especialmente en el mundo del pentesting.",
     "inLanguage": "en",
@@ -537,7 +537,7 @@
   <header id="single_header" class="mt-5 max-w-prose">
     
     <h1 class="mt-0 text-4xl font-extrabold text-neutral-900 dark:text-neutral">
-      PRESENTACIÓN LICEO
+      Liceo
     </h1>
     <div class="mt-1 mb-6 text-base text-neutral-500 dark:text-neutral-400 print:hidden">
       
