--- a/proyectos/index.html
+++ b/proyectos/index.html
@@ -590,7 +590,7 @@
 
         
         <div class="font-bold text-xl text-neutral-800 decoration-primary-500 hover:underline hover:underline-offset-2 dark:text-neutral"
-          href="/proyectos/liceo/">PRESENTACIÓN LICEO</div>
+          href="/proyectos/liceo/">Liceo</div>
         
 
         <div class="text-sm text-neutral-500 dark:text-neutral-400">
