--- a/retos/picoctf/wherearetherobots/index.html
+++ b/retos/picoctf/wherearetherobots/index.html
@@ -930,11 +930,11 @@
         </span>
         <span>
           
-            <a class="flex text-right group ml-3" href="/retos/picoctf/challenge13/">
+            <a class="flex text-right group ml-3" href="/retos/picoctf/thenumbers/">
               <span class="flex flex-col">
                 <span
                   class="mt-[0.1rem] leading-6 group-hover:underline group-hover:decoration-primary-500"
-                  >Writeup - Mod 26</span
+                  >Writeup - The Numbers</span
                 >
                 <span class="mt-[0.1rem] text-xs text-neutral-500 dark:text-neutral-400">
                   
